sg_lb.tf
/*==== VPC's Default Security Group ======*/
resource "aws_security_group" "default" {
  name        = "epsilon-default-sg"
  description = "Default security group to allow inbound/outbound from the VPC"
  vpc_id      = "${aws_vpc.epsilon-vpc.id}"
  depends_on  = [aws_vpc.epsilon-vpc]
  ingress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = true
  }
  
  egress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = "true"
  }
  tags = {
   
  }
}
